change quote, fix spacing

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -197,6 +197,7 @@ h4 {
 	align-items: flex-start;
 	padding: 14% 80px 50px 5%;
 	background-color: $background-2;
+	margin-left: 50px;
 	
 	.about-container {
 		flex-direction: row;
